References KULRICE-4204.